# GodotGUI

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  method_bind.gen.inc
editor/: editor_node.h  register_exporters.gen.cpp
scene/: CMakeLists.txt
scene/2d/: CMakeLists.txt
scene/3d/: CMakeLists.txt  camera.h  mesh_instance.cpp  visibility_notifier.cpp  visual_instance.cpp
scene/resources/: world.h  world_2d.h
